--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body, html {
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 #landing{
@@ -14,4 +15,70 @@ div.full-page {
     max-width:100%;
     height: 100vh;
     overflow: hidden;
+}
+
+#landing-page{
+    color: white;
+    font-size: 40px;
+    font-family: Helvetica;
+    text-align: center;
+    top:50%;
+    left:50%;
+    position: absolute;
+    transform:  translate(-50%, -50%);
+}
+
+.panels{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+h2{
+    font-size: 2rem;
+    text-align: center;
+    font-family: Helvetica;
+}
+
+p{
+    text-align: center;
+    font-family: Helvetica;
+}
+
+p span{
+    display: block;
+}
+
+header{
+    position: fixed;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    overflow: hidden;
+    z-index: 1;
+}
+
+nav{
+    text-align: right;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+nav a {
+    color: white;
+    margin-right: 15px;
+    margin-left: 15px;
+    text-decoration: None;
+    font-size: 18;
+}
+
+img{
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    width: 25%;
+    filter: grayscale(80%);
+    filter: blur('gaussian');
 }
